@@ -5,8 +5,9 @@ Description:
     should not be suffixed with 'Model'.
 
     As additional parameters, the generator will take attribute pairs described by name and type. These attributes will
-    be used to prepopulate the migration to create the table for the model and give you a set of predefined fixture.    
-    You don't have to think up all attributes up front, but it's a good idea of adding just the baseline of what's 
+    be used to prepopulate the migration to create the table for the model and give you a set of predefined fixture.  By
+    default, created_at and updated_at timestamps are added to migration for you, so you needn't specify them by hand.
+    You don't have to think up all attributes up front, but it's a good idea of adding just the baseline of what's
     needed to start really working with the resource.
 
     The generator creates a model class in app/models, a test suite in test/unit, test fixtures in
@@ -21,6 +22,6 @@ Examples:
             Fixtures:   test/fixtures/accounts.yml
             Migration:  db/migrate/XXX_add_accounts.rb
 
-    ./script/generate model post title:string created_on:date body:text published:boolean
-    
+    ./script/generate model post title:string body:text published:boolean
+
         Creates post model with predefined attributes.
